project/node/backend/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: xxx
    namespace: dev
spec:
    selector:
        app: xxx
    type: ClusterIP
    ports:
       - protocol: TCP
         targetPort: 8080
         port: 8080
